# kicad-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  config.py  debug_tas5830_logic.py  final_test.kicad_sch  kicad_mcp.py  main.py  pin_fix_test.kicad_sch  pyproject.toml  requirements.txt  run_tests.py  test_actual_pin_routing.py  test_clone_fix_backup_20250918_200534.kicad_sch  test_clone_fix_backup_20250918_200551.kicad_sch  test_complete_pin_fix.py  test_current_pins.py  test_fixes_backup_20250918_195227.kicad_sch  test_formatted_pin_matching.py  test_pin_format_mismatch.py  test_pin_routing_fix.py  test_simple_tas5830_fix.py  test_symbol_library_access.py  test_tas5830_coordinate_fix.py  test_tas5830_fix_verification.py  test_tas5830_pin_analysis.py  test_tas5830_symbol_lookup.py  test_wire_connection.py  test_wire_routing_algorithm.py  test_wiring.kicad_sch  test_wiring_backup_20250918_201603.kicad_sch  test_wiring_debug.kicad_sch  wip.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: analysis_guide.md  analysis_guide.me  bom_guide.md  configuration.md  development.md  drc_guide.md  netlist_guide.md  pattern_guide.md  project_guide.md  prompt_guide.md  schematic_edit_guide.md  thumbnail_guide.md  troubleshooting.md
kicad_mcp/: __init__.py  config.py  context.py  server.py
kicad_mcp/prompts/: __init__.py  bom_prompts.py  drc_prompt.py  pattern_prompts.py  schematic_edit_prompts.py  templates.py
kicad_mcp/resources/: __init__.py  bom_resources.py  drc_resource.py  drc_resources.py  files.py  netlist_resources.py  pattern_resources.py  projects.py
kicad_mcp/tools/: __init__.py  analysis_tools.py  bom_tools.py  datasheet_tools.py  drc_tools.py  export_tools.py  netlist_tools.py  pattern_tools.py  project_tools.py  schematic_edit_tools.py  validation_tools.py
kicad_mcp/tools/drc_impl/: __init__.py  cli_drc.py  ipc_drc.py
kicad_mcp/utils/: __init__.py  boundary_validator.py  component_utils.py  drc_history.py  env.py  file_utils.py  kicad_api_detection.py  kicad_cli.py  kicad_utils.py  logger.py  netlist_parser.py  path_validator.py  pattern_recognition.py  python_path.py  secure_subprocess.py  temp_dir_manager.py
tests/: debug_pin_issues.py  resistor_ic_test.kicad_sch  test_final_mcp.py  test_fixed_pins.py  test_improved_pins.py  test_pin_coordinates.py  test_production_pin_coordinates.py  test_production_pins.py  test_resistor_to_ic_connections.py  test_schematic_edit_tools.py  test_symbolpin_fix.py  test_wiring.kicad_sch
tests/unit/utils/: test_path_validator.py  test_secure_subprocess.py
